--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 	<!-- Created by Ahsan Zaman on May 5, 2019 -->
 	<title>Sssnake...</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
-	<link rel="manifest" href="favicon.ico/site.webmanifest">
+	<link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon.ico/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon.ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon.ico/favicon-16x16.png">
+	<link rel="manifest" href="./assets/favicon.ico/site.webmanifest">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
