--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 		<div id="infoContainer" class="overlay large-msg">
 			<div class="center-in-container">
-				<div style="position:relative; background-color:#F9DBBD; padding:15px; text-align:center; border-radius:5px; width:20vw;">
+				<div style="position:relative; background-color:#F9DBBD; padding:15px; text-align:center; border-radius:5px; width:20vw; min-width:300px;">
 					<div class="top-right icon-button" onclick="closeInfoContainer();" style="z-index:1000;"><span class="material-icons">close</span></div>
 					<h3 style="margin-top:5px;">Instructions</h3>
 					<hr />
