Added github link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<h3 style="margin-top:10px;">About</h3>
 					<hr />
 					<div style="width:95%; text-align:justify;">
-						Created by Ahsan Zaman on May 5, 2019. Plain HTML, CSS, JS, and JQuery were used.
+						Created by Ahsan Zaman on May 5, 2019. Plain HTML, CSS, JS, and JQuery were used. <a href="https://github.com/ahsanzam/Snake" target="_blank">GitHub <span class="material-icons" style="font-size:1em;">launch</span></a>
 					</div>
 					<button type="button" class="btn btn-info" style="width:30%; margin-top:15px;" onclick="closeInfoContainer()">Ok</button>
 				</div>
